--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <h2>I am Full stack developer</h2>
     <hr>
 
-    <h3><a href="../2.4.html">Movie Ranking project</a></h3>
+    <h3><a href="./public/2.4.html">Movie Ranking project</a></h3>
     
     <img src="./assets/images/movie.png" alt="movie ranking" height="200">
 
 
 <br>
-    <h3><a href="../3.4.html">Birthday Invite Project</a> </h3>
+    <h3><a href="./public/3.4.html">Birthday Invite Project</a> </h3>
     
     <img src="./assets/images/birthday.png" alt="Birthday invite" height="200">
 
